--- a/css/mainStyles.css
+++ b/css/mainStyles.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 body {
     background-color: rgb(0, 0, 0);
 }
@@ -14,8 +10,91 @@ h1.hero-title {
     text-align: center;
 }
 
-.square {
+h1.content-title {
+    font-family: 'Circular Std';
+    font-weight: "Bold";
+    font-size: 196px;
+    text-align: center;
+    color: white;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 3px;
+    mix-blend-mode: difference;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.content-square {
     height: 50px;
     width: 50px;
     background-color: #ffffff;
+    opacity: 0;
+    position: absolute;
+    top: 51%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
   }
+
+/* Required to set height of flexbox container for vertical alignment */
+html, body, .center-flex {
+  height: 100%;
+  }
+/* Used to center items horizontally and vertically */
+.center-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+/* Seamless Loop CSS */
+.button-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 2rem;
+  gap: 1rem;
+}
+
+.wrapper {
+  height: 20%;
+  width: 60%;
+  border-left: solid 2px var(--color-surface-white);
+  border-right: solid 2px var(--color-surface-white);
+  position: relative;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.carousel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80%;
+  width: 20%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  flex-shrink: 0;
+  color: var(--color-just-black);
+  font-size: 21px;
+  cursor: pointer;
+}
+
+.show-overflow {
+  overflow: visible;
+}
