--- a/css/mainStyles.css
+++ b/css/mainStyles.css
@@ -48,6 +48,13 @@ html, body, .center-flex {
   position: relative;
 }
 
+.center-absolute {
+  position: absolute;
+  top: 49%;
+  left: 59%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
 /* Seamless Loop CSS */
 .button-cont {
   display: flex;
@@ -58,41 +65,33 @@ html, body, .center-flex {
   gap: 1rem;
 }
 
-.wrapper {
-  height: 20%;
-  width: 60%;
-  border-left: solid 2px var(--color-surface-white);
-  border-right: solid 2px var(--color-surface-white);
+.content-wrapper {
+  height: 60%;
+  width: 90%;
   position: relative;
   display: flex;
   align-items: center;
   overflow: hidden;
 }
 
-.carousel {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.box {
+.content-item {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 80%;
-  width: 20%;
+  width: 50%;
   margin: 0;
   padding: 0;
   position: relative;
   flex-shrink: 0;
-  color: var(--color-just-black);
-  font-size: 21px;
+  font-size: 148px;
   cursor: pointer;
+  font-family: 'Circular Std';
+  font-weight: "Bold";
+  text-align: center;
+  color: #000000;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 3px;
 }
 
 .show-overflow {
